--- a/.github/workflows/quick_color-tag.yml
+++ b/.github/workflows/quick_color-tag.yml
@@ -26,7 +26,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          VERSION=$(go run version.go)
+          VERSION=$(go run ./cmd/version)
           if [[ -z "${VERSION:-}" ]]; then
             echo "Failed to compute version via Go" >&2
             exit 1
